Fixes on API responses
